--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -36,5 +36,10 @@
         <members>*</members>
         <name>StaticResource</name>
     </types>
+    <types>
+        <members>Account__c</members>
+        <members>Category__c</members>
+    <name>CustomTab</name>
+ </types>
     <version>47.0</version>
 </Package>
