Update the yml file with project specific setting and add sample data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/.sfdx": true
-  }
+  },
+  "eslint.nodePath": "/Users/prishan/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-47.2.0/node_modules"
 }
